Para arreglar el proyecto